| Summary: | ASTERISK-22215: All SIP blind transfer tests are failing due to time out | ||
| Reporter: | Matt Jordan (mjordan) | Labels: | Asterisk12 |
| Date Opened: | 2013-07-30 13:41:30 | Date Closed: | 2013-08-15 07:13:03 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_sip/Transfers Tests/testsuite |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | All four SIP blind transfer tests are failing due to time out. Much like some other tests, these are also not displaying error messages when they fail.
This task should: * Fix the tests/code * Display error messages noting the conditions that were not met when the tests fail | ||
| Comments: | By: Kinsey Moore (kmoore) 2013-08-09 15:49:40.516-0500 There are serious locking issues in the way of getting these tests working properly that revolve around usage of ast_channel_bridge_peer in chan_sip and lock order inversion. Test patches and chan_sip patches coming this weekend or Monday. By: Kinsey Moore (kmoore) 2013-08-13 07:31:41.520-0500 Patches posted to reviewboard: Deadlock fixing patch: https://reviewboard.asterisk.org/r/2756/ Test fixing patch: https://reviewboard.asterisk.org/r/2758/ | ||